Updated to 1.0.5
- Added prefix to config which can be changed

- Added reload command